2010-05-29  Oliver Haag  <oliver.haag@gmail.com>
* Version 0.6.0:
* Fixed bug on 64-bit architectures
* Added files needed for building

2010-08-16  Oliver Haag  <oliver.haag@gmail.com>
* Version 0.6.1:
* USB-devices can be used by any user in the plugdev group now

2010-08-20  Oliver Haag  <oliver.haag@gmail.com>
* Added checking for End of File Record to the hex-writing routine

2010-08-26  Oliver Haag  <oliver.haag@gmail.com>
* Version 0.6.2:
* Removed Oleg from AUTHORS
* Renamed writeSRecords to writeIntelHex

2010-11-17  Oliver Haag  <oliver.haag@gmail.com>
* Patches by Romuald Conty <neomilium@gmail.com>:
* Updated configure.in
* Removed "warning: "PACKAGE_NAME" redefined" during make
* Error if bfd (libbfd) is not usable
* Silent make if available
* Fixed DSO-2100 USB vid/pid
* Added --with-firmware-dir configure option and udev-rules file generation